- align titles to the left
- display a separator below titles
- justify big texts
- refresh:
  o language step
  o license step

Version 11.11 - 18 August 2008

- 2009.0 beta 2 logo
- l10n:
  o fix selecting locales-XX for locales that specify scripting (#42663)
  o update list of locales
  o update list of KDE languages for KDE4

Version 11.9.1 - 13 August 2008

- fix left panel in 1024x768

Version 11.9 - 13 August 2008

- new title style
- partition wizard:
  o refreshed GUI

Version 11.8.1 - 13 August 2008

- really add deskop images

Version 11.8 - 12 August 2008

- default to UTF-8 for chinese simplified (#42137)
- new desktop choice screen

Version 11.7 - 11 August 2008

- handle new drivers:
  o ethernet: r6040
  o gigabit: atl1e, bnx2x, sfc
  o PATA: pata_ninja32, pata_ns87415
  o SCSI: mvsas
  o USB host controller: isp1760
  o WAN: lapbether
  o wireless: rndis_wlan, rtl8180
- add product type to URL when fetching mirror list

Version 11.3 - 4 August 2008

- fix spacing around buttons

Version 11.2 - 31 July 2008

- include extmod Xorg module (for SHAPE extension)

Version 11.1 - 31 July 2008

- do not require matchbox gconf schema (not provided by drakx-installer-matchbox)

Version 11.0 - 30 July 2008

- first steps toward new installer style

Version 10.48 - 28 July 2008

- 2009.0 beta 1 logo
- drakx-in-chroot: prefer Xephyr over Xnest since Xnest lacks many
  extensions needed by matchbox-window-manager

Version 10.47 - 10 July 2008

- load disk/scsi before disk/ide since libata is now the default
  (to prevent modules::load_category from loading ide-generic too early)
- fix reading and setting kdmrc (by resolving alternative in chroot)

Version 10.46 - 10 July 2008

- authentication:
  o add back fix to force the password to be utf8 (#23273)
  o fix reading md5/shadow options in /etc/pam.d/system-auth

Version 10.45 - 9 July 2008

- update autologin file path for kdm4
- default to KDE4 (instead of KDE) if kdm config exists when reading