@@ -1,6 +1,7 @@
 - align titles to the left
 - display a separator below titles
 - justify big texts
+- popup advanced settings in dialogs
 - refresh:
   o language step
   o license step
